scripts/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: nip-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "*.192-168-228-200.nip.io"
      port: 9898
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
