scripts/istio/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo-test
spec:
  parentRefs:
    - name: nip-gateway
  rules:
    - backendRefs:
        - name: podinfo-istio-frontend
          port: 9898
